LinKreta_POC_Repository/force-app/main/default/objects/Currency_Code__c/Currency_Code__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the Currency ISO codes and their relevant data</description>
    <label>Currency Code</label>
    <nameField>
        <label>Currency ISO Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>