LinKreta_POC_Repository/force-app/main/default/objects/Currency_Code__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <externalId>true</externalId>
    <label>Currency Code</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>