LinKreta_POC_Repository/force-app/main/default/objects/Currency_Code__c/fields/Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Currency_Name__c</fullName>
    <label>Currency Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>