LinKreta_POC_Repository/force-app/main/default/objects/Currency_Code__c/fields/Sub_Currency_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Currency_Name__c</fullName>
    <label>Sub Currency Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>